# agent-security-framework

./: .gitignore  AGT_EVALUATION.md  ARCHITECTURE.md  CLAUDE_CODE_INTEGRATION.md  Dockerfile  Dockerfile.phase3  LICENSE  Makefile  README.md  STAGE3_MODEL_COMPARISON.md  THREAT_MODEL.md  agt_audit_bridge.py  agt_compliance_bridge.py  agt_hitl_bridge.py  agt_integration.py  asf_hook.py  asf_hook_daemon.py  asf_mcp_server.py  asf_regression_test.py  asf_test_battery.py  asf_verify_trace.py  assessment.py  audit.py  canonical_log.py  classifier.pkl  classifier.pkl.sha256  claude_trace_store.py  dataset_builder.py  demo.py  demo_finale.py  demo_hitl.py  demo_scenario.py  docker-compose.yml  evaluate_stage25.py  graph_framework.py  hardening.py  hermes_trace_store.py  init_db.py  install.sh  interceptor.py  (+24 more)
asf_hook_fast/: Cargo.toml
asf_rust_daemon/: Cargo.toml
asf_rust_daemon/src/: assessment.rs  audit.rs  canonical_log.rs  checker.rs  db.rs  forwarder.rs  hardening.rs  hook_client.rs  interceptor.rs  key_authority.rs  main.rs  output_guard.rs  patterns.rs  protocol.rs  registry.rs  sandbox.rs  trace_preview.rs  trace_store.rs  validator.rs  wrapper.rs
asf_rust_daemon/src/wrapper/: agent.rs  claude.rs  daemon.rs  hermes.rs  session.rs
benchmarks/: benchmark_stage25b.py  benchmark_stage3.py
docs/: EQUIVALENCE.md  EQUIVALENCE_L15_GAP.md  SECURITY_APIKEYS.md  THESIS_FUTURE_WORK.md  ip-boundary.md  release-process.md  sandbox_enforcement_analysis.md  sandbox_file_tools_contract.md  sandbox_phase3_design.md
scripts/: README.md  asf-prod.sh  asf-status.sh  asf-test.sh
tests/: conftest.py  test_asf_egress_proxy.py  test_asf_env.py  test_asf_file_worker.py  test_asf_hook.py  test_asf_supervisor.py  test_identity.py  (+13 more)
(+19 files in other folders)
