[package]
name = "asf-rust-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "asf-rust-daemon"
path = "src/main.rs"

[[bin]]
name = "asf-rust-hook"
path = "src/hook_client.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
base64 = "0.22"
libc = "0.2"
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10" }
tokio = { version = "1", features = ["full"] }
unicode-normalization = "0.1"
uuid = { version = "1", features = ["v4"] }
