[package]
name = "asf-rust-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "asf-rust-daemon"
path = "src/main.rs"

[[bin]]
name = "asf-rust-hook"
path = "src/hook_client.rs"

[[bin]]
name = "asf-run"
path = "src/wrapper.rs"

[[bin]]
name = "asf-sync"
path = "src/bin/asf_sync.rs"

[[bin]]
name = "asf-admin"
path = "src/bin/asf_admin.rs"

[dependencies]
aes-gcm = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
base64 = "0.22"
data-encoding = "2"
ed25519-dalek = { version = "2", features = ["rand_core"] }
libc = "0.2"
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = { version = "0.10" }
tokio = { version = "1", features = ["full"] }
unicode-normalization = "0.1"
uuid = { version = "1", features = ["v4"] }
